@@ -172,15 +172,17 @@ v0.46:
 	Added torches (id=50) to wild ignore ids default.
 	Modified the onDamage call.
 v0.47:
-	Changed the debug output for when permissions are checked against as it might be causing confusiong.
+	Changed the debug output for when permissions are checked against as it might be causing confusing.
 	Quick fix for /tc and /nc with no msg.
 	Town/Nation chat is sent to the console.
-	Ingame Resident/Town/Nation/Global messages are now sent to it's own log file. It's nature is to start a new log every time the plugin is enabled. However, the nature of the backup system will keep now keep the log of what went on during that time period.
+	Ingame Resident/Town/Nation/Global messages are now sent to it's own log file. It's nature is to start a new log every time the plugin is enabled. Due to the nature of the backup system, it will now keep the log of what went on during that time period.
 	Compiled against Permissions 2.5, to see if it makes any difference.
 	Added maximum plots per resident globally (default=1000). Anyone trying to claim more than this will get an error.
 	Added default permissions for when a new town/resident is registered.
 	Mayor/Assistant can now edit plots within the town, even if the plot owner denies everything.
 	Fixed outsiderSwitch permission. (Thanks PixelEater)
+	wartime_death_price and death_price were renamed to price_death_wartime and price_death.
+	Testing a /townyadmin unclaim command. Untested, use at your own risk.
 	
 	
 	
